--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.17)
 project(multithreading_lab_1)
+
 set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
-set(SOURCE_FILES main.cpp)
+find_package(OpenMP REQUIRED)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
+set(SOURCE_FILES main.cpp)
 add_executable(lab1 ${SOURCE_FILES})
