--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(OpenMP REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
-set(SOURCE_FILES main.cpp)
+file(GLOB SOURCE_FILES src/*.cpp)
 add_executable(lab1 ${SOURCE_FILES})
