--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -9,4 +9,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 file(GLOB SOURCE_FILES src/*.cpp src/*.*h*)
 
 add_executable(lab2 runners/main.cpp ${SOURCE_FILES})
+add_executable(lab2_performance_tests runners/performanceTest.cpp ${SOURCE_FILES})
 add_executable(lab2_unit_tests runners/unitTests.cpp ${SOURCE_FILES})
